--- a/redux-voting-server/package.json
+++ b/redux-voting-server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "voting-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "babel-node index.js",
@@ -29,5 +28,9 @@
     "immutable": "^3.7.5",
     "redux": "^3.0.4",
     "socket.io": "^1.3.7"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "description": ""
 }
